<resources>
<string name="hello">Hello World, SocialViewActivity</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="app_name">Sina Weibo</string>
<string name="facebook_main_screen">Mobile SNS</string>
<string name="cmnew_setting_help_label_text">Set Facebook contact information</string>
<string name="twitter_main_screen">Weibo.Lite</string>
<string name="media_upload">Facebook</string>
<string name="nitification_format">%1$s unread notifications</string>
<string name="pref_facebook_perm_settings">Settings</string>
<string name="pref_facebook_notification_setting">Notifications settings</string>
<string name="pref_facebook_notification_general_setting">General settings</string>
<string name="pref_facebook_notification_vibrate">Vibrate</string>
<string name="pref_facebook_notification_vibrate_desc">Vibrate on incoming notifications</string>
<string name="pref_facebook_notification_led">Phone LED</string>
<string name="pref_facebook_notification_led_desc">Flash LED on incoming notifications</string>
<string name="pref_facebook_notification_enable">Notifications</string>
<string name="pref_facebook_notification_msg_enable">Messages</string>
<string name="pref_facebook_notification_poke_enable">Pokes</string>
<string name="pref_facebook_notification_request_enable">Friend requests</string>
<string name="pref_facebook_notification_event_enable">Event invites</string>
<string name="pref_facebook_notification_group_enable">Group invites</string>
<string name="pref_facebook_category">Facebook Account</string>
<string name="pref_twitter_category">Twitter Account</string>
<string name="twitter_setting_screen">Twitter settings</string>
<string name="social_setting_screen">Socail settings</string>
<string name="contact_sync_hello">Contact sync screen</string>
<string name="twitter_tweet_screen">Tweets</string>
<string name="twitter_tweets_loading">Loading tweets</string>
<string name="twitter_tweet_detail_screen">Tweet details</string>
<string name="facebook_loing_ui">Facebook login</string>
<string name="facebook_loing_ui_webview">Login view</string>
<string name="twitter_user_detail_screen">User details</string>
<string name="twitter_trend_loading">Loading trends</string>
<string name="twitter_trend_search">Trend search</string>
<string name="menu_title_note_create">New Note</string>
<string name="twitter_compose_screen">Send</string>
<string name="context_status_reply">Reply</string>
<string name="context_status_forward">Forward</string>
<string name="context_status_retweet">Retweet</string>
<string name="context_status_favorite">Add to favorities</string>
<string name="context_status_direct">Send message</string>
<string name="pref_twitter_specific_category">Twitter setting</string>
<string name="twitter_message_send_option">Sent</string>
<string name="twitter_message_inbox_option">Inbox</string>
<string name="context_status_unfavorite">Un-favorite</string>
<string name="twitter_favor_title">Un-favorite</string>
<string name="twitter_favor_title_unfavor">Delete</string>
<string name="context_select_all">Select all</string>
<string name="context_unselect_all">Unselect all</string>
<string name="context_status_delete">Delete</string>
<string name="sns_delete">Delete</string>
<string name="sns_delete_all">Remove all short cut</string>
<string name="context_follow_following">Following</string>
<string name="context_folloer_stop_following">Stop following</string>
<string name="twitter_follower_loading">Follower</string>
<string name="twitter_following_loading">Following</string>
<string name="twitter_user_detail_from_following">Following</string>
<string name="recent_tweets">Recent tweets</string>
<string name="context_following_followers">Follower</string>
<string name="context_following_search">Search @</string>
<string name="following_detail_stop_button">Stop following</string>
<string name="following_detail_stop_button_add">Follow</string>
<string name="context_follower_following">Following</string>
<string name="context_compose_message">Direct message</string>
<string name="twitter_myaccount_activity">Profile</string>
<string name="context_pre_page">Pre page</string>
<string name="context_next_page">Next page</string>
<string name="Tweets_Title_direct_message">Direct message</string>
<string name="twitter_message_loading">Loading messages</string>
<string name="context_message_new">New message</string>
<string name="context_message_delete">Delete message</string>
<string name="facebook_wall_loading">Loading wall</string>
<string name="facebook_event_loading">Loading events</string>
<string name="facebook_wall_title">Send</string>
<string name="facebook_walltowall_title">Send to Facebook</string>
<string name="facebook_status_update_title">Share</string>
<string name="pref_facebook_perm_assign">Assign extended permission</string>
<string name="pref_facebook_perm_assign_desc">If Facebook user has no extended permissions, they will be prompted to assign permission.</string>
<string name="pref_facebook_ext_permission_assign">Advanced settings</string>
<string name="pref_facebook_ext_permission">Extended permissions</string>
<string name="pref_facebook_ext_permission_desc">Set extend permissions</string>
<string name="facebook_account_tile_poke">Poke</string>
<string name="facebook_WALL_POST_title">Post wall</string>
<string name="facebook_group_detail">Join in</string>
<string name="facebook_group_decline">Decline</string>
<string name="facebook_friends_loading">Loading friends</string>
<string name="facebook_pages_loading">Loading pages</string>
<string name="facebook_upcomingbd_friends_loading">Loading upcoming birthday</string>
<string name="pref_facebook_view_category">View display settings</string>
<string name="pref_facebook_view_category_summary">Set synchronization intervals</string>
<string name="pref_facebook_other_setting">Other settings</string>
<string name="facebook_mailbox_loading">Loading messages </string>
<string name="facebook_mailbox_inbox_loading">Loading inbox messages </string>
<string name="facebook_mailbox_sent_loading">Loading sent messages</string>
<string name="facebook_mailbox_update_loading">Loading update messages </string>
<string name="facebook_mail_detail">Conversation</string>
<string name="facebook_mail_one_detail">Message</string>
<string name="facebook_mail_detail_reply">Reply</string>
<string name="facebook_phonebook_loading">Loading phonebook</string>
<string name="facebook_user_select">Friends select</string>
<string name="facebook_mail_send">Send</string>
<string name="facebook_phonebook_nomore">No more</string>
<string name="facebook_status_loading">Loading status</string>
<string name="facebook_main_stream_screen">News Feed</string>
<string name="facebook_main_send">Send</string>
<string name="facebook_stream_you_like">I like this.</string>
<string name="facebook_contact_sync">Facebook contact sync</string>
<string name="facebook_event_sync">Facebook event sync</string>
<string name="facebook_location_hint">Where are you now?</string>
<string name="facebook_location_stop">Cancel</string>
<string name="facebook_location_start">Request location</string>
<string name="facebook_media_upload">Attach</string>
<string name="test_isFacebookUser">is a Facebook User</string>
<string name="test_gloabalcontactsync">Contact Sync</string>
<string name="test_gloabaleventsync">Event sync</string>
<string name="test_addEvent">Add event</string>
<string name="test_taskstatus_str">Monitor task</string>
<string name="no_event_info">No event information is available</string>
<string name="facebook_status_update_compose">What\'s on your mind?</string>
<string name="facebook_wall_to_wall_compose">Write something here...</string>
<string name="facebook_location_update_title">Share location</string>
<string name="facebook_comments_update_title">Comments</string>
<string name="facebook_phonebook_title">Phonebook</string>
<string name="facebook_inbox_title">Inbox</string>
<string name="facebook_messages_title">Messages</string>
<string name="facebook_sent_title">Sent</string>
<string name="facebook_update_title">Update</string>
<string name="facebook_updates_title">Updates</string>
<string name="pref_adv_setting">Advanced settings</string>
<string name="pref_extras_reset_default">Reset</string>
<string name="pref_extras_reset_default_dlg_title">Reset to default</string>
<string name="pref_extras_reset_default_summary">Clear all data and restore default settings</string>
<string name="pref_extras_reset_default_dlg">Warning:  all data will be deleted and default settings will be restored</string>
<string name="facebook_event_title">Sync to calendar</string>
<string name="facebook_event_title_bar">Events</string>
<string name="facebook_photo_upload">Share</string>
<string name="facebook_wall_share">Share</string>
<string name="facebook_photo_upload_compose">What\'s on your mind?</string>
<string name="facebook_setting_sign_in">Sign in</string>
<string name="facebook_find_friends_loading">Finding friends</string>
<string name="facebook_set_contact_email">Email</string>
<string name="contact_cell_lable_text">Cell phone</string>
<string name="contact_other_lable_text">Other phone</string>
<string name="facebook_contact_set">Update contact</string>
<string name="facebook_set_contact_title">Set contact</string>
<string name="to_button_lable">To:</string>
<string name="twitter_main_title">Tweets</string>
<string name="twitter_tweets_title">Tweets</string>
<string name="twitter_search_title">Search</string>
<string name="twitter_message_fail_send_all">Failed to send message to all receiver(s)</string>
<string name="twitter_message_fail_update_status">Failed to update status</string>
<string name="twitter_message_title_send">Send</string>
<string name="twitter_message_title_reply">Reply</string>
<string name="twitter_message_title_direct_message">Direct message</string>
<string name="twitter_message_title_update">Update</string>
<string name="twitter_message_title_forward">Forward</string>
<string name="twitter_message_title_retweet">Retweet</string>
<string name="facebook_requests_loading">Loading requests</string>
<string name="facebook_find_friends">Find friends</string>
<string name="sns_task_management"/>
<string name="sns_finished_task_title">All tasks completed</string>
<string name="sns_running_task_title">All tasks in process</string>
<string name="sns_failed_task_title">All tasks have failed</string>
<string name="sns_pendding_task_title">All tasks are pending</string>
<string name="task_cancel_all">Cancel all tasks</string>
<string name="twitter_dlg_tweet_search">Searching...</string>
<string name="twitter_dlg_send_msg">Sending message...</string>
<string name="twitter_dlg_update_status">Updating status...</string>
<string name="twitter_dlg_load_trend">Loading trends...</string>
<string name="twitter_dlg_load_tweets">Loading tweets...</string>
<string name="context_menu_insert_img">Select photo</string>
<string name="context_menu_capture_photo">Capture photo</string>
<string name="menu_title_stop">Stop</string>
<string name="menu_title_settings">Settings</string>
<string name="menu_title_refresh">Refresh</string>
<string name="menu_twitter_title_following">Following</string>
<string name="menu_twitter_title_follower">Follower</string>
<string name="menu_twitter_title_add_to_favor">Add to favorites</string>
<string name="menu_twitter_title_unfavorites">Unfavorite</string>
<string name="menu_twitter_title_follow">Follow</string>
<string name="menu_twitter_title_unfollow">Unfollow</string>
<string name="menu_twitter_title_friend_line">Friend line</string>
<string name="menu_twitter_title_user_line">User line</string>
<string name="sns_cancel">Cancel</string>
<string name="sns_add_comment">Comment</string>
<string name="photo_your_comments">Write something...</string>
<string name="twitter_find_people">Find people</string>
<string name="photo_hint_comments">Write something...</string>
</resources>